Refactor to avoid IOException.