@@ -47,31 +47,34 @@ public class FileUtilsTest {
         }
     }
 
-    private Path createTempFileWithContent(String prefix, String suffix, String content) throws IOException {
-        Path tempFile = Files.createTempFile(prefix, suffix);
-        Files.writeString(tempFile, content);
-
-        return tempFile;
+    private Path createTempFileWithContent(String prefix, String suffix, String content) {
+        try {
+            Path tempFile = Files.createTempFile(prefix, suffix);
+            Files.writeString(tempFile, content);
+            return tempFile;
+        } catch (IOException e) {
+            throw new UncheckedIOException(e);
+        }
     }
 
     private void deleteTempFile(Path file) {
         assertDoesNotThrow(() -> Files.delete(file), "Failed to delete temp file: " + file);
     }
 
-    private void deleteTempFileIfExists(String prefix, String suffix) throws IOException {
+    private void deleteTempFileIfExists(String prefix, String suffix) {
         try {
             Files.deleteIfExists(Path.of(prefix + suffix));
         } catch (IOException e) {
-            throw new IOException("Failed to delete existing temp file", e);
+            throw new UncheckedIOException("Failed to delete existing temp file: " + prefix + suffix, e);
         }
     }
 
     @Test
-    void testEmptyFileThrowsIOException() throws IOException {
+    void testEmptyFileThrowsException() {
         Path emptyFile = createTempFileWithContent("empty_file", ".test", "");
         try {
-            UncheckedIOException exception = assertThrows(
-                    UncheckedIOException.class,
+            IllegalStateException exception = assertThrows(
+                    IllegalStateException.class,
                     () -> FileUtils.loadFileToMap(emptyFile)
             );
 
@@ -82,15 +85,15 @@ public class FileUtilsTest {
     }
 
     @Test
-    void testValidJsonFileReturnsExpectedMap() throws IOException {
+    void testValidJsonFileReturnsExpectedMap() {
         Path tempJsonFile = createTempFileWithContent("test", ".json", """
-        {
-          "key1": "value1",
-          "key2": {
-            "nestedKey": "nestedValue"
-          }
-        }
-        """);
+                {
+                  "key1": "value1",
+                  "key2": {
+                    "nestedKey": "nestedValue"
+                  }
+                }
+                """);
         try {
             LinkedHashMap<String, Object> result = FileUtils.loadFileToMap(tempJsonFile);
 
@@ -103,12 +106,12 @@ public class FileUtilsTest {
     }
 
     @Test
-    void testValidYamlFileReturnsExpectedMap() throws IOException {
+    void testValidYamlFileReturnsExpectedMap() {
         Path tempYamlFile = createTempFileWithContent("test", ".yaml", """
-        key1: value1
-        key2:
-          nestedKey: nestedValue
-        """);
+                key1: value1
+                key2:
+                  nestedKey: nestedValue
+                """);
         try {
             LinkedHashMap<String, Object> result = FileUtils.loadFileToMap(tempYamlFile);
 
@@ -121,7 +124,7 @@ public class FileUtilsTest {
     }
 
     @Test
-    void testFileWithoutExtensionThrowsException() throws IOException {
+    void testFileWithoutExtensionThrowsException() {
         Path noExtTempFile = createTempFileWithContent("test", "", "key1: value1");
         try {
             IllegalArgumentException exception = assertThrows(
@@ -134,7 +137,7 @@ public class FileUtilsTest {
     }
 
     @Test
-    void testFileWithEndingDotThrowsException() throws IOException {
+    void testFileWithEndingDotThrowsException() {
         Path endDotTempFile = createTempFileWithContent("test", ".", "key1: value1");
         try {
             IllegalArgumentException exception = assertThrows(
@@ -149,7 +152,7 @@ public class FileUtilsTest {
     }
 
     @Test
-    void testUnsupportedFileFormatThrowsException() throws IOException {
+    void testUnsupportedFileFormatThrowsException() {
         Path tempTxtFile = createTempFileWithContent("test", ".txt", "key1: value1");
         try {
             IllegalArgumentException exception = assertThrows(
@@ -172,61 +175,71 @@ public class FileUtilsTest {
     }
 
     @Test
-    void testWriteJsonFileFromMap() throws IOException {
+    void testWriteJsonFileFromMap() {
         LinkedHashMap<String, Object> data = new LinkedHashMap<>();
         data.put("key1", "value1");
         data.put("key2", Map.of("nestedKey", "nestedValue"));
 
-        Path tempJsonFile = Files.createTempFile("write_test", ".json");
         try {
-            FileUtils.writeMapToFile(tempJsonFile, data);
-
-            assertEquals(data, FileUtils.loadFileToMap(tempJsonFile));
-        } finally {
-            deleteTempFile(tempJsonFile);
+            Path tempJsonFile = Files.createTempFile("write_test", ".json");
+            try {
+                FileUtils.writeMapToFile(tempJsonFile, data);
+                assertEquals(data, FileUtils.loadFileToMap(tempJsonFile));
+            } finally {
+                deleteTempFile(tempJsonFile);
+            }
+        } catch (IOException e) {
+            throw new UncheckedIOException(e);
         }
     }
 
     @Test
-    void testWriteYamlFileFromMap() throws IOException {
+    void testWriteYamlFileFromMap() {
         LinkedHashMap<String, Object> data = new LinkedHashMap<>();
         data.put("key1", "value1");
         data.put("key2", Map.of("nestedKey", "nestedValue"));
 
-        Path tempYamlFile = Files.createTempFile("write_test", ".yaml");
         try {
-            FileUtils.writeMapToFile(tempYamlFile, data);
-
-            assertEquals(data, FileUtils.loadFileToMap(tempYamlFile));
-        } finally {
-            deleteTempFile(tempYamlFile);
+            Path tempYamlFile = Files.createTempFile("write_test", ".yaml");
+            try {
+                FileUtils.writeMapToFile(tempYamlFile, data);
+                assertEquals(data, FileUtils.loadFileToMap(tempYamlFile));
+            } finally {
+                deleteTempFile(tempYamlFile);
+            }
+        } catch (IOException e) {
+            throw new UncheckedIOException(e);
         }
     }
 
     @Test
-    void testWriteUnsupportedFormatThrowsException() throws IOException {
-        Path tempTxtFile = Files.createTempFile("write_test", ".txt");
+    void testWriteUnsupportedFormatThrowsException() {
         try {
-            LinkedHashMap<String, Object> data = new LinkedHashMap<>();
-            data.put("key", "value");
+            Path tempTxtFile = Files.createTempFile("write_test", ".txt");
+            try {
+                LinkedHashMap<String, Object> data = new LinkedHashMap<>();
+                data.put("key", "value");
 
-            IllegalArgumentException ex = assertThrows(IllegalArgumentException.class, () ->
-                    FileUtils.writeMapToFile(tempTxtFile, data));
+                IllegalArgumentException ex = assertThrows(IllegalArgumentException.class, () ->
+                        FileUtils.writeMapToFile(tempTxtFile, data));
 
-            assertTrue(ex.getMessage().contains("Unsupported extension"));
-        } finally {
-            deleteTempFile(tempTxtFile);
+                assertTrue(ex.getMessage().contains("Unsupported extension"));
+            } finally {
+                deleteTempFile(tempTxtFile);
+            }
+        } catch (IOException e) {
+            throw new UncheckedIOException(e);
         }
     }
 
     @Test
-    void testLoadJsonFileToObject() throws IOException {
+    void testLoadJsonFileToObject() {
         Path tempJsonFile = createTempFileWithContent("test", ".json", """
-        {
-          "name": "John",
-          "version": 1
-        }
-        """);
+                {
+                  "name": "John",
+                  "version": 1
+                }
+                """);
         try {
             final TestConfig expectedConfig = new TestConfig("John", 1);
 
@@ -240,11 +253,11 @@ public class FileUtilsTest {
     }
 
     @Test
-    void testLoadYamlFileToObject() throws IOException {
+    void testLoadYamlFileToObject() {
         Path tempYamlFile = createTempFileWithContent("test", ".yaml", """
-            name: "John"
-            version: 1
-            """);
+                name: "John"
+                version: 1
+                """);
         try {
             TestConfig actualConfig = FileUtils.loadFileToObject(tempYamlFile, TestConfig.class);
 
@@ -256,24 +269,25 @@ public class FileUtilsTest {
     }
 
     @Test
-    void testLoadFileToObjectNegatives() throws IOException {
-        assertThrows(UncheckedIOException.class, () -> FileUtils.loadFileToObject(Paths.get(""), TestConfig.class));
-        Assertions.assertThrows(IllegalArgumentException.class, () -> FileUtils.loadFileToObject(Path.of("Wrong_name"), TestConfig.class));
+    void testLoadFileToObjectNegatives() {
+        assertThrows(IllegalStateException.class, () -> FileUtils.loadFileToObject(Paths.get(""), TestConfig.class));
+
+        assertThrows(IllegalArgumentException.class, () -> FileUtils.loadFileToObject(Path.of("Wrong_name"), TestConfig.class));
 
         final Path wrongExtensionFile = createTempFileWithContent("wrong", ".ext", "dummy values");
-        Assertions.assertThrows(IllegalArgumentException.class, () -> FileUtils.loadFileToObject(wrongExtensionFile, TestConfig.class));
+        assertThrows(IllegalArgumentException.class, () -> FileUtils.loadFileToObject(wrongExtensionFile, TestConfig.class));
         deleteTempFileIfExists("wrong", ".ext");
 
         final Path emptyJsonFile = createTempFileWithContent("empty_file", ".json", "");
-        Assertions.assertThrows(UncheckedIOException.class, () -> FileUtils.loadFileToObject(emptyJsonFile, TestConfig.class));
+        assertThrows(IllegalStateException.class, () -> FileUtils.loadFileToObject(emptyJsonFile, TestConfig.class));
         deleteTempFileIfExists("empty_file", ".json");
 
         final Path emptyYamlFile1 = createTempFileWithContent("empty_file", ".yaml", "");
-        Assertions.assertThrows(UncheckedIOException.class, () -> FileUtils.loadFileToObject(emptyYamlFile1, TestConfig.class));
+        assertThrows(IllegalStateException.class, () -> FileUtils.loadFileToObject(emptyYamlFile1, TestConfig.class));
         deleteTempFileIfExists("empty_file", ".yaml");
 
         final Path emptyYamlFile2 = createTempFileWithContent("empty_file", ".yml", "");
-        Assertions.assertThrows(UncheckedIOException.class, () -> FileUtils.loadFileToObject(emptyYamlFile2, TestConfig.class));
+        assertThrows(IllegalStateException.class, () -> FileUtils.loadFileToObject(emptyYamlFile2, TestConfig.class));
         deleteTempFileIfExists("empty_file", ".yml");
     }
 }
